# social-scrubber

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  social-scrubber
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
archives/: bluesky_20250901_120137_at___did_plc_eje35wraj3fcbmamchkpwjdw_app.bsky.feed.post_3lxrkl5psdk2e.json
examples/: example_usage.py
scripts/: pre-commit-checks.sh
social_scrubber/: __init__.py  __main__.py  cli.py  config.py  utils.py
tests/: test_base_platform.py  test_bluesky_api_fixes.py  test_cli_platform_filtering.py  test_config.py
